hphp/hack/test/typecheck/class_meth15.php
<?hh

function test(): void {
  class_meth(self::class, 'foo');
}
